tree-sitter-kanon/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.use_declaration,
      $.primitive_declaration,
      $.function_definition,
      $.rule_definition,
      $.extend_definition,
      $.node_declaration,
      $.sort_declaration,
      $.notation_declaration,
      $.type_definition,
      $.operator_declaration,
      $.constant_declaration,
      $.floating_attribute,
    ),

    // ------------------------------------------------------------------
    // Items

    use_declaration: $ => seq(
      'use',
      field('module', choice($.builtin_module, $.string)),
    ),

    // [use builtin "bool"]: a module built into kanon
    builtin_module: $ => seq('builtin', field('name', $.string)),

    primitive_declaration: $ => seq(
      field('kind', choice('prim', 'oracle')),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      repeat($.attribute),
    ),

    function_definition: $ => seq(
      'fn',
      field('name', $.identifier),
      repeat(field('parameter', $.parameter)),
      optional(seq(':', field('return_type', $._type))),
      repeat($.attribute),
      '=',
      field('body', $._sequence_or_expression),
    ),

    node_declaration: $ => seq('node', $.constructor_declaration),

    // [sort TBitVector of nat [@get size]]
    sort_declaration: $ => seq('sort', $.constructor_declaration),

    // [notation BitVec]: the literal patterns of a leaf node
    notation_declaration: $ => seq('notation', field('node', $.constructor)),

    type_definition: $ => seq(
      'type',
      optional(field('parameters', $.type_parameters)),
      field('name', typeIdentifier($)),
      repeat($.attribute),
      optional(seq('=', field('body', choice($.variant_declaration, $.record_declaration)))),
    ),

    // ['a box], [('a, 'b) pair]: the parameters of an abstract type
    variant_declaration: $ => seq(
      optional('|'),
      sep1($.constructor_declaration, '|'),
    ),

    // [C of a * b (x, y) : s1 -> s2 when e [@attr]]
    constructor_declaration: $ => seq(
      field('name', $.constructor),
      optional(seq('of', sep1(field('argument', $._type_application), '*'))),
      optional(field('parameters', $.constructor_parameters)),
      optional(seq(':', field('sorts', $.sorts))),
      optional(seq('when', field('condition', $._expression))),
      repeat($.attribute),
    ),

    constructor_parameters: $ => seq(
      '(',
      sep1(choice($.identifier, $.wildcard), ','),
      ')',
    ),

    sorts: $ => sep1($._sort, '->'),

    _sort: $ => choice(
      $._simple_expression,
      $.application_expression,
      $.constructor_expression,
      $.list_sort,
    ),

    // [a list], the sort of the operands of an n-ary node
    list_sort: $ => prec(PREC.app + 1, seq(field('element', $.identifier), 'list')),

    record_declaration: $ => seq(
      '{',
      sep1($.field_declaration, ';'),
      optional(';'),
      '}',
    ),

    field_declaration: $ => seq(
      field('name', fieldIdentifier($)),
      ':',
      field('type', $._type),
    ),

    // [infix "+" = Add, bv_add unchecked, lit_add], [prefix "-" = ...]
    operator_declaration: $ => seq(
      field('kind', choice('infix', 'prefix')),
      field('operator', $.string),
      '=',
      field('body', $._sequence_or_expression),
    ),

    // [constant 0 (v) = bv_zero (size v)], [constant ones (v) = ...],
    // [constant true = v_true], [constant "0" = ...]
    constant_declaration: $ => seq(
      'constant',
      field('literal', choice($.string, $.identifier, $.number, $.boolean)),
      optional(seq('(', field('parameter', $.identifier), ')')),
      '=',
      field('body', $._sequence_or_expression),
    ),

    // [[@@@lean_root "R"]]
    floating_attribute: $ => seq(
      '[@@@',
      field('name', $.attribute_name),
      repeat($.string),
      ']',
    ),

    // [[@ocaml "Binop.t"]], [[@fold lit_add]], [[@unit 1]]
    attribute: $ => seq(
      '[@',
      field('name', $.attribute_name),
      repeat(field('argument', choice($.string, $.attribute_argument, $.number, $.boolean))),
      ']',
    ),

    attribute_name: $ => $._name,

    attribute_argument: $ => $._name,

    _name: $ => choice($.identifier, $.constructor),

    // ------------------------------------------------------------------
    // Functions and rules

    // [(v1 v2 : t)], or [(v : TBitVector n)], a term of that sort
    parameter: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      ':',
      choice(field('type', $._type), field('sort', $._sort_annotation)),
      ')',
    ),

    _type: $ => choice($.function_type, $.tuple_type, $._type_application),

    function_type: $ => prec.right(seq(
      field('domain', choice($.tuple_type, $._type_application)),
      '->',
      field('range', $._type),
    )),

    tuple_type: $ => seq(
      $._type_application,
      repeat1(seq('*', $._type_application)),
    ),

    _type_application: $ => choice(
      typeIdentifier($),
      $.parenthesized_type,
      $.type_application,
    ),

    // [t list], [(var * ty) list], [(t, int) pair]
    type_application: $ => seq(
      field('argument', choice($._type_application, $.type_arguments)),
      field('constructor', typeIdentifier($)),
    ),

    parenthesized_type: $ => seq('(', $._type, ')'),

    // ------------------------------------------------------------------
    // Expressions

    _sequence_or_expression: $ => choice($._expression, $.sequence_expression),

    _expression: $ => choice($._tuple_element, $.tuple_expression),

    _tuple_element: $ => choice(
      $._simple_expression,
      $.application_expression,
      $.constructor_expression,
      $.assert_expression,
      $.unary_expression,
      $.binary_expression,
      $.let_expression,
      $.match_expression,
      $.if_expression,
    ),

    tuple_expression: $ => prec(PREC.tuple, seq($._tuple_element, ',', $._tuple_rest)),

    // the remaining components of a tuple (rather than a [repeat1], which
    // would lose the precedence of the tuple)
    _tuple_rest: $ => prec.right(PREC.tuple, seq(
      $._tuple_element,
      optional(seq(',', $._tuple_rest)),
    )),

    binary_expression: $ => choice(
      ...INFIX.map(([level, assoc, ops]) => assoc(PREC[level], seq(
        field('left', $._tuple_element),
        field('operator', choice(...ops.map(o => alias(o, $.operator)))),
        field('right', $._tuple_element),
      ))),
      // [a urem b], an operator declared by [infix "urem"], after an
      // operand that cannot be applied to it (see the header)
      prec.left(PREC.mul, seq(
        field('left', $._tuple_element),
        field('operator', alias($.identifier, $.infix_word)),
        field('right', $._tuple_element),
      )),
    ),

    application_expression: $ => prec(PREC.app, seq(
      field('function', $.identifier),
      $._arguments,
    )),

    // the arguments of an application, as many as possible (rather than a
    // [repeat1], which would lose the precedence of the application)
    _arguments: $ => prec.right(seq(
      field('argument', $._simple_expression),
      optional($._arguments),
    )),

    constructor_expression: $ => prec(PREC.app, seq(
      field('constructor', $.constructor),
      field('argument', $._simple_expression),
    )),

    // [assert e], [not e]
    _simple_expression: $ => choice(
      $.identifier,
      $.constructor,
      $.boolean,
      $.number,
      $.unit,
      $.parenthesized_expression,
      $.typed_expression,
      $.list_expression,
      $.record_expression,
      $.field_expression,
      $.prefix_expression,
    ),

    parenthesized_expression: $ => seq('(', $._sequence_or_expression, ')'),

    // [(e : t)], or [(v : TBitVector n)], the sort of an operand of a spec
    typed_expression: $ => seq(
      '(',
      field('expression', $._sequence_or_expression),
      ':',
      choice(field('type', $._type), field('sort', $._sort_annotation)),
      ')',
    ),

    _sort_annotation: $ => choice($.constructor, $.constructor_expression),

    list_expression: $ => seq(
      '[',
      optional(seq(sep1($._expression, ';'), optional(';'))),
      ']',
    ),

    identifier: _ => /[a-z_][a-zA-Z0-9_']*/,

    constructor: _ => /[A-Z][a-zA-Z0-9_']*/,

    wildcard: _ => '_',

    number: _ => /[0-9]+/,

    boolean: _ => choice('true', 'false'),

    string: $ => seq('"', optional($.string_content), '"'),

    string_content: _ => token.immediate(/[^"\\\n]+/),
  },
});
