tree-sitter-kanon/test/corpus/items.txt
================================================================================
Uses
================================================================================

use builtin "bool"
use "../modules/exists"

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (builtin_module
      (string
        (string_content))))
  (use_declaration
    (string
      (string_content))))

================================================================================
Floating attributes
================================================================================

[@@@lean_root "Kanon"]
[@@@lean_param "FS" "FloatSem"]
[@@@ocaml_prims "Prims"]

--------------------------------------------------------------------------------

(source_file
  (floating_attribute
    (attribute_name
      (identifier))
    (string
      (string_content)))
  (floating_attribute
    (attribute_name
      (identifier))
    (string
      (string_content))
    (string
      (string_content)))
  (floating_attribute
    (attribute_name
      (identifier))
    (string
      (string_content))))

================================================================================
Types
================================================================================

type var [@ocaml "Symex.Var.t"] [@lean "Int"] [@noeq]
type checked = { signed : bool; unsigned : bool }
type ext [@ocaml "Ext.t"] =
  | Var of var
  | Seq of t list
  | Pair of checked * t * t [@attr]
type bv

--------------------------------------------------------------------------------

(source_file
  (type_definition
    (type_identifier)
    (attribute
      (attribute_name
        (identifier))
      (string
        (string_content)))
    (attribute
      (attribute_name
        (identifier))
      (string
        (string_content)))
    (attribute
      (attribute_name
        (identifier))))
  (type_definition
    (type_identifier)
    (record_declaration
      (field_declaration
        (field_identifier)
        (type_identifier))
      (field_declaration
        (field_identifier)
        (type_identifier))))
  (type_definition
    (type_identifier)
    (attribute
      (attribute_name
        (identifier))
      (string
        (string_content)))
    (variant_declaration
      (constructor_declaration
        (constructor)
        (type_identifier))
      (constructor_declaration
        (constructor)
        (type_application
          (type_identifier)
          (type_identifier)))
      (constructor_declaration
        (constructor)
        (type_identifier)
        (type_identifier)
        (type_identifier)
        (attribute
          (attribute_name
            (identifier))))))
  (type_definition
    (type_identifier)))

================================================================================
Nodes
================================================================================

node Var of var
node Bool of bool : TBool
node Eq : a -> a -> TBool [@comm]
node Distinct : a list -> TBool
node Plus : TInt -> TInt -> TInt [@comm] [@unit 0] [@fold z_add Int]
node BvExtract of nat * nat (i, j) : TBitVector n -> TBitVector (j - i + 1)
    when 0 <= i && i <= j && j < n [@fold lit_extract]
node BvExtend of bool * nat (_, k) : TBitVector n -> TBitVector (n + k)
sort TBitVector of nat [@get size]
sort TBool

--------------------------------------------------------------------------------

(source_file
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (sorts
        (constructor))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (sorts
        (identifier)
        (identifier)
        (constructor))
      (attribute
        (attribute_name
          (identifier)))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (sorts
        (list_sort
          (identifier))
        (constructor))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (sorts
        (constructor)
        (constructor)
        (constructor))
      (attribute
        (attribute_name
          (identifier)))
      (attribute
        (attribute_name
          (identifier))
        (number))
      (attribute
        (attribute_name
          (identifier))
        (attribute_argument
          (identifier))
        (attribute_argument
          (constructor)))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (type_identifier)
      (constructor_parameters
        (identifier)
        (identifier))
      (sorts
        (constructor_expression
          (constructor)
          (identifier))
        (constructor_expression
          (constructor)
          (parenthesized_expression
            (binary_expression
              (binary_expression
                (identifier)
                (operator)
                (identifier))
              (operator)
              (number)))))
      (binary_expression
        (binary_expression
          (number)
          (operator)
          (identifier))
        (operator)
        (binary_expression
          (binary_expression
            (identifier)
            (operator)
            (identifier))
          (operator)
          (binary_expression
            (identifier)
            (operator)
            (identifier))))
      (attribute
        (attribute_name
          (identifier))
        (attribute_argument
          (identifier)))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (type_identifier)
      (constructor_parameters
        (wildcard)
        (identifier))
      (sorts
        (constructor_expression
          (constructor)
          (identifier))
        (constructor_expression
          (constructor)
          (parenthesized_expression
            (binary_expression
              (identifier)
              (operator)
              (identifier)))))))
  (sort_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (attribute
        (attribute_name
          (identifier))
        (attribute_argument
          (identifier)))))
  (sort_declaration
    (constructor_declaration
      (constructor))))

================================================================================
Subsorts
================================================================================

sort TBitVector of nat
subsort TNonzero of nat : TBitVector n
(** The zero. *)
subsort TZero of nat : TBitVector n [@lean "IsZero"]
node Div of bool : TBitVector n -> TNonzero n -> TBitVector n

--------------------------------------------------------------------------------

(source_file
  (sort_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)))
  (subsort_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (sorts
        (constructor_expression
          (constructor)
          (identifier)))))
  (comment)
  (subsort_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (sorts
        (constructor_expression
          (constructor)
          (identifier)))
      (attribute
        (attribute_name
          (identifier))
        (string
          (string_content)))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (sorts
        (constructor_expression
          (constructor)
          (identifier))
        (constructor_expression
          (constructor)
          (identifier))
        (constructor_expression
          (constructor)
          (identifier))))))

================================================================================
Lists of parenthesised sorts
================================================================================

node Concat : (TBitVector n) list -> TBitVector n

--------------------------------------------------------------------------------

(source_file
  (node_declaration
    (constructor_declaration
      (constructor)
      (sorts
        (list_sort
          (parenthesized_expression
            (constructor_expression
              (constructor)
              (identifier))))
        (constructor_expression
          (constructor)
          (identifier))))))

================================================================================
Operators and constants
================================================================================

infix "&&" = And, b_and
infix "urem" = Rem false, bv_rem false, lit_urem
prefix "not" = Not, b_not
infix "≤" = Le, b_le
constant "0" (v) = bv_zero (size v)
constant ones (v) = bv_ones (size v)
constant 1 = one
constant true = v_true

--------------------------------------------------------------------------------

(source_file
  (operator_declaration
    (string
      (string_content))
    (tuple_expression
      (constructor)
      (identifier)))
  (operator_declaration
    (string
      (string_content))
    (tuple_expression
      (constructor_expression
        (constructor)
        (boolean))
      (application_expression
        (identifier)
        (boolean))
      (identifier)))
  (operator_declaration
    (string
      (string_content))
    (tuple_expression
      (constructor)
      (identifier)))
  (operator_declaration
    (string
      (string_content))
    (tuple_expression
      (constructor)
      (identifier)))
  (constant_declaration
    (string
      (string_content))
    (identifier)
    (application_expression
      (identifier)
      (parenthesized_expression
        (application_expression
          (identifier)
          (identifier)))))
  (constant_declaration
    (identifier)
    (identifier)
    (application_expression
      (identifier)
      (parenthesized_expression
        (application_expression
          (identifier)
          (identifier)))))
  (constant_declaration
    (number)
    (identifier))
  (constant_declaration
    (boolean)
    (identifier)))

================================================================================
Primitives and oracles
================================================================================

prim bv_of_lit : t -> bv
oracle sort_by_tag : t list -> t list
prim used_binders : (var * ty) list -> t -> (var * ty) list

--------------------------------------------------------------------------------

(source_file
  (primitive_declaration
    (identifier)
    (function_type
      (type_identifier)
      (type_identifier)))
  (primitive_declaration
    (identifier)
    (function_type
      (type_application
        (type_identifier)
        (type_identifier))
      (type_application
        (type_identifier)
        (type_identifier))))
  (primitive_declaration
    (identifier)
    (function_type
      (type_application
        (parenthesized_type
          (tuple_type
            (type_identifier)
            (type_identifier)))
        (type_identifier))
      (function_type
        (type_identifier)
        (type_application
          (parenthesized_type
            (tuple_type
              (type_identifier)
              (type_identifier)))
          (type_identifier))))))

================================================================================
Nested comments
================================================================================

(* a comment (* nested *) [x] *)
prim v_true : t

--------------------------------------------------------------------------------

(source_file
  (comment)
  (primitive_declaration
    (identifier)
    (type_identifier)))

================================================================================
Notations
================================================================================

notation Bool
notation BitVec

--------------------------------------------------------------------------------

(source_file
  (notation_declaration
    (constructor))
  (notation_declaration
    (constructor)))

================================================================================
Primitives with attributes
================================================================================

prim cost : t -> int [@no_lean]

--------------------------------------------------------------------------------

(source_file
  (primitive_declaration
    (identifier)
    (function_type
      (type_identifier)
      (type_identifier))
    (attribute
      (attribute_name
        (identifier)))))

================================================================================
Nodes built at a computed sort
================================================================================

fn mk_var (x : var) (s : ty) : t = (Var x : s)
fn mk_field (i : int) (v : t) : t = (Field (i, v) : field_ty v i)
fn mk_field_in (i : int) (v : t) : t = (Field (i, v) : (nth_ty (types_of [v]) i))

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter
      (identifier)
      (type_identifier))
    (parameter
      (identifier)
      (type_identifier))
    (type_identifier)
    (typed_expression
      (constructor_expression
        (constructor)
        (identifier))
      (type_identifier)))
  (function_definition
    (identifier)
    (parameter
      (identifier)
      (type_identifier))
    (parameter
      (identifier)
      (type_identifier))
    (type_identifier)
    (typed_expression
      (constructor_expression
        (constructor)
        (parenthesized_expression
          (tuple_expression
            (identifier)
            (identifier))))
      (application_expression
        (identifier)
        (identifier)
        (identifier))))
  (function_definition
    (identifier)
    (parameter
      (identifier)
      (type_identifier))
    (parameter
      (identifier)
      (type_identifier))
    (type_identifier)
    (typed_expression
      (constructor_expression
        (constructor)
        (parenthesized_expression
          (tuple_expression
            (identifier)
            (identifier))))
      (parenthesized_expression
        (application_expression
          (identifier)
          (parenthesized_expression
            (application_expression
              (identifier)
              (list_expression
                (identifier))))
          (identifier))))))

================================================================================
Arrays
================================================================================

fn f (a : int array) (b : (t * int) array array) : int array =
  array_set a (array_length a - 1) ([| 1; 2 |] = a)
fn g : int array = [||]
fn h (l : int list) : int array = array_of_list [| x; y; |]

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter
      (identifier)
      (type_application
        (type_identifier)
        (type_identifier)))
    (parameter
      (identifier)
      (type_application
        (type_application
          (parenthesized_type
            (tuple_type
              (type_identifier)
              (type_identifier)))
          (type_identifier))
        (type_identifier)))
    (type_application
      (type_identifier)
      (type_identifier))
    (application_expression
      (identifier)
      (identifier)
      (parenthesized_expression
        (binary_expression
          (application_expression
            (identifier)
            (identifier))
          (operator)
          (number)))
      (parenthesized_expression
        (binary_expression
          (array_expression
            (number)
            (number))
          (operator)
          (identifier)))))
  (function_definition
    (identifier)
    (type_application
      (type_identifier)
      (type_identifier))
    (array_expression))
  (function_definition
    (identifier)
    (parameter
      (identifier)
      (type_application
        (type_identifier)
        (type_identifier)))
    (type_application
      (type_identifier)
      (type_identifier))
    (application_expression
      (identifier)
      (array_expression
        (identifier)
        (identifier)))))

================================================================================
Traversals and computed sorts of nodes
================================================================================

[@@@traversals]
node Proj of nat (i) : TTuple tys -> Rules.nth_ty tys i
node Tuple of t list (vs) : TTuple (Rules.types_of vs)

--------------------------------------------------------------------------------

(source_file
  (floating_attribute
    (attribute_name
      (identifier)))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_identifier)
      (constructor_parameters
        (identifier))
      (sorts
        (constructor_expression
          (constructor)
          (identifier))
        (application_expression
          (qualified_identifier)
          (identifier)
          (identifier)))))
  (node_declaration
    (constructor_declaration
      (constructor)
      (type_application
        (type_identifier)
        (type_identifier))
      (constructor_parameters
        (identifier))
      (sorts
        (constructor_expression
          (constructor)
          (parenthesized_expression
            (application_expression
              (qualified_identifier)
              (identifier))))))))
